# diplom

./: Makefile.am  Makefile.in  common.mk  config.h.in~  configure  configure.ac  main.c  remove.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: Makefile.am  aps.h  mac.h  nwk.h  phy.h  streebog.h
nto/arm/o.le/.build/: Makefile  config.h  config.status
nto/arm/o.le/.build/.deps/: main.Po
nto/arm/o.le/.build/srs/.deps/: aps.Po  mac.Po  nwk.Po  phy.Po  streebog.Tpo
nto/x86/o/.build/: config.status  diplom
srs/: Makefile.am  apc.c  aps.c  mac.c  main.c  nwk.c  phy.c  streebog.c
