AC_INIT([zigbee_stack], [1.0], [you@example.com])
AC_CONFIG_SRCDIR([main.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for header files.
AC_CHECK_HEADERS([gost/gost_hash.h stdint.h stdlib.h string.h])

# Output
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
